WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301794
[text-decoration] Incorrect underline position when inline box sides are trimmed
https://bugs.webkit.org/show_bug.cgi?id=301794
Summary
[text-decoration] Incorrect underline position when inline box sides are trimmed
alan
Reported
2025-10-31 18:49:20 PDT
ssia
Attachments
Patch
(10.06 KB, patch)
2025-10-31 19:13 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(9.04 KB, patch)
2025-11-01 05:45 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-10-31 19:13:31 PDT
Created
attachment 477247
[details]
Patch
alan
Comment 2
2025-11-01 05:45:25 PDT
Created
attachment 477249
[details]
[fast-cq]Patch
EWS
Comment 3
2025-11-01 10:58:43 PDT
Committed
302435@main
(2bc4378d1c8c): <
https://commits.webkit.org/302435@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 477249
[details]
.
Radar WebKit Bug Importer
Comment 4
2025-11-01 10:59:11 PDT
<
rdar://problem/163858721
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug